Fix filter transition on iOS

--- a/src/assets/Skills.css
+++ b/src/assets/Skills.css
@@ -3,10 +3,7 @@
 }
 
 .skill-icon svg {
-  @apply h-12 w-12 grayscale last:hidden hover:grayscale-0;
-  transition-property: filter, -webkit-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 200ms;
+  @apply h-12 w-12 grayscale transition-all duration-300 last:hidden hover:grayscale-0;
 }
 
 .skill-icon h5 {
@@ -15,10 +12,4 @@
 
 .skill-icon:hover h5 {
   @apply opacity-100;
-}
-
-.transition-filters {
-  transition-property: filter, -webkit-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 250ms;
 }
